src/global.css
@import 'open-props/style';
@import 'open-props/normalize';
@import 'open-props/buttons';
@import 'open-props/gray-hsl';

:root {
	--primary: var(--blue-9);
	--secondary: var(--blue-2);
	--loading: var(--blue-5);
	--error: var(--red-8);
	--shadow-med: var(--shadow-3);
	--grey: var(--gray-6);
	--brand: var(--primary);

	--link: var(--primary);
	--link-visited: var(--link);

	--background: var(--surface-1); /* Set by normalize */
}

@media (prefers-color-scheme: dark) {
	:root {
		--link: var(--secondary);
	}
}

body {
	font-family: var(--font-sans);
	margin: 0;
}

body,
html,
div#svelte {
	height: 100%;
}

.visually-hidden {
	border: 0;
	clip: rect(0 0 0 0);
	height: auto;
	margin: 0;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
	white-space: nowrap;
}

h1 {
	background-image: var(--gradient-22);
	border-radius: var(--border-size-3);
	padding: var(--size-2);
}

@media (prefers-color-scheme: dark) {
	h1 {
		background-image: var(--gradient-23);
	}
}

a {
	text-decoration: underline;
	text-decoration-color: var(--link);
	display: inline-block;
}

a:focus {
	color: var(--background);
	background-color: var(--link);
	outline: none;
}

a:focus:not(.focus-visible) {
	color: var(--link);
	background-color: inherit;
	outline: none;
}

details:focus,
summary:focus {
	outline: var(--size-1) solid var(--brand);
	border-radius: var(--border-size-3);
}

.spaced {
	display: grid;
	gap: var(--size-4);
}

